--- a/helmod/templates/lmod.csh.j2
+++ b/helmod/templates/lmod.csh.j2
@@ -6,7 +6,7 @@
 #
 ########################################################################
 
-set MY_NAME="/data/itlab/helmod/apps/lmod/lmod/init/cshrc"
+set MY_NAME="{{ helmod.path }}/apps/lmod/lmod/init/cshrc"
 
 
 
@@ -28,10 +28,10 @@ if ( ! $?MODULEPATH_ROOT ) then
     setenv LMOD_SETTARG_CMD     :
     setenv LMOD_COLORIZE        yes
     setenv LMOD_PREPEND_BLOCK   normal
-    setenv MODULEPATH_ROOT      "/data/itlab/helmod/modulefiles"
-    setenv MODULEPATH           `/data/itlab/helmod/apps/lmod/lmod/libexec/addto --append MODULEPATH $MODULEPATH_ROOT/$LMOD_sys $MODULEPATH_ROOT/Core`
-    setenv MODULEPATH           `/data/itlab/helmod/apps/lmod/lmod/libexec/addto --append MODULEPATH /data/itlab/helmod/apps/lmod/lmod/modulefiles/Core`
-    setenv MODULESHOME          "/data/itlab/helmod/apps/lmod/lmod"
+    setenv MODULEPATH_ROOT      "{{ helmod.path }}/modulefiles"
+    setenv MODULEPATH           `{{ helmod.path }}/apps/lmod/lmod/libexec/addto --append MODULEPATH $MODULEPATH_ROOT/$LMOD_sys $MODULEPATH_ROOT/Core`
+    setenv MODULEPATH           `{{ helmod.path }}/apps/lmod/lmod/libexec/addto --append MODULEPATH {{ helmod.path }}/apps/lmod/lmod/modulefiles/Core`
+    setenv MODULESHOME          "{{ helmod.path }}/apps/lmod/lmod"
     setenv BASH_ENV             "$MODULESHOME/init/bash"
 
     #
@@ -40,10 +40,10 @@ if ( ! $?MODULEPATH_ROOT ) then
     if ( ! $?MANPATH ) then
       setenv MANPATH :
     endif
-    setenv MANPATH `/data/itlab/helmod/apps/lmod/lmod/libexec/addto MANPATH /data/itlab/helmod/apps/lmod/lmod/share/man`
+    setenv MANPATH `{{ helmod.path }}/apps/lmod/lmod/libexec/addto MANPATH {{ helmod.path }}/apps/lmod/lmod/share/man`
 
 endif
 
-if ( -f  /data/itlab/helmod/apps/lmod/lmod/init/csh  ) then
-  source /data/itlab/helmod/apps/lmod/lmod/init/csh
+if ( -f  {{ helmod.path }}/apps/lmod/lmod/init/csh  ) then
+  source {{ helmod.path }}/apps/lmod/lmod/init/csh
 endif
