--- a/common/templates/sshd_config.j2
+++ b/common/templates/sshd_config.j2
@@ -31,4 +31,4 @@ Banner /etc/issue.net
 # override default of no subsystems
 Subsystem	sftp	/usr/libexec/openssh/sftp-server
 
-AllowGroups root administrators
+AllowGroups root administrators gcbdeploy
