Allow DHTS unix and ops staff to ssh and cleanup some dup roles.
Allow DHTS unix and operations staff to ssh into our cluster systems,
clean up some duplicated roles, fix hosts file on the cluster to
reference new G4 ip addresses and fix the slurm configuration to match
the current state of our cluster.

--- a/common/templates/sudoers.j2
+++ b/common/templates/sudoers.j2
@@ -90,6 +90,7 @@ Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin
 ## Allow root to run any commands anywhere 
 root	ALL=(ALL) 	ALL
 %administrators ALL=(ALL)   ALL
+%dhts_admins ALL=(ALL)   ALL
 
 
 ## Allows members of the 'sys' group to run networking, software, 
