Incorporated a bunch of suggestions from recent pull request.
There were a bunch of easy fixes that were suggested in a recent pull
request that were worth implementing plus we are now checking the kernel
version from facts for the version of gpfs gplbin rpm to install.

--- a/common/templates/sshd_config.j2
+++ b/common/templates/sshd_config.j2
@@ -31,4 +31,4 @@ Banner /etc/issue.net
 # override default of no subsystems
 Subsystem	sftp	/usr/libexec/openssh/sftp-server
 
-AllowGroups root administrators gcbdeploy dhts_admins
+AllowGroups {{ ssh_groups }}
