remove stray comma in json config

--- a/bespin_job_watcher/templates/config.j2
+++ b/bespin_job_watcher/templates/config.j2
@@ -17,6 +17,6 @@
     "port": 5672
   },
   "bespinapi": {
-    "url": "{{ bespin_settings.web.url }}",
+    "url": "{{ bespin_settings.web.url }}"
   }
 }
