Installs and configures oauthenticator for gitlab
- Requires application registered with GitLab
- provide the gitlab host and client config in a gitlab dictionary
- Sets IP and port based on ansible variables (rather than system-read info)
- Beefs up lineinfile tasks to include regex

--- a/jupyterhub/templates/jupyterhub.service.j2
+++ b/jupyterhub/templates/jupyterhub.service.j2
@@ -6,6 +6,9 @@ After=network-online.target
 
 [Service]
 User=jupyter
+{% if authenticator == 'gitlab_oauth' %}
+Environment=GITLAB_HOST={{ gitlab.host }}
+{% endif %}
 ExecStart=/usr/local/bin/jupyterhub
 WorkingDirectory=/etc/jupyterhub
 
