Adds slurm batchspawner support
- installs batchspawner from pip/git for slurmspawner
- configures jupyterhub to use slurmspawner (when spawner == 'slurm')
- Cleans up gitlab oauth with blockinfile
- Configures jupyterhub to log to /var/log/jupyterhub.log
- Customzies the batchspawner sbatch script (to omit PATH)

Successfully spawns a slurm job, but cannot reach it due to firewall

--- a/jupyterhub/templates/jupyterhub-init.j2
+++ b/jupyterhub/templates/jupyterhub-init.j2
@@ -24,7 +24,7 @@ export GITLAB_HOST={{ gitlab.host }}
 
 start() {
     cd /etc/jupyterhub
-    daemon "$DAEMON $DAEMON_ARGS" &
+    daemon "$DAEMON $DAEMON_ARGS" > /var/log/jupyterhub.log 2>&1 &
 }
 
 stop() {
