--- a/bespin_lando/templates/lando_config.j2
+++ b/bespin_lando/templates/lando_config.j2
@@ -12,13 +12,13 @@ vm_settings:
   floating_ip_pool_name: "{{ bespin_settings.worker_vm.floating_ip_pool_name }}"
   default_favor_name: "{{ bespin_settings.worker_vm.default_favor_name }}"
   cwl_base_command:
-  {% for item in bespin_settings.worker_vm.cwl_base_command %}
-    - "{{ item }}"
-  {% endfor %}
+  {% for item in bespin_settings.worker_vm.cwl_base_command -%}
+  {{ '  ' }}- "{{ item }}"
+  {% endfor -%}
   volume_mounts:
-  {% for device, mount in  bespin_settings.worker_vm.volume_mounts.iteritems() %}
-    {{ device }}: {{ mount }}
-  {% endfor %}
+  {% for device, mount in  bespin_settings.worker_vm.volume_mounts.iteritems() -%}
+  {{ '  ' }}{{ device }}: {{ mount }}
+  {% endfor -%}
 cloud_settings:
   auth_url: "{{ bespin_settings.worker_openstack.auth_url }}"
   username: "{{ bespin_settings.worker_openstack.username }}"
