Fix lando_config template again - cloud_settings was getting indented incorrectly

--- a/bespin_lando/templates/lando_config.yml.j2
+++ b/bespin_lando/templates/lando_config.yml.j2
@@ -18,7 +18,8 @@ vm_settings:
   volume_mounts:
   {% for device, mount in  bespin_settings.worker_vm.volume_mounts.iteritems() -%}
   {{ '  ' }}{{ device }}: {{ mount }}
-  {% endfor -%}
+  {% endfor %}
+
 cloud_settings:
   auth_url: "{{ bespin_settings.worker_openstack.auth_url }}"
   username: "{{ bespin_settings.worker_openstack.username }}"
