--- a/bespin_lando/templates/lando_config.yml.j2
+++ b/bespin_lando/templates/lando_config.yml.j2
@@ -10,7 +10,7 @@ vm_settings:
   ssh_key_name: "{{ bespin_settings.worker_vm.ssh_key_name }}"
   network_name: "{{ bespin_settings.worker_vm.network_name }}"
   floating_ip_pool_name: "{{ bespin_settings.worker_vm.floating_ip_pool_name }}"
-  default_favor_name: "{{ bespin_settings.worker_vm.default_favor_name }}"
+  default_flavor_name: "{{ bespin_settings.worker_vm.default_flavor_name }}"
   cwl_base_command:
   {% for item in bespin_settings.worker_vm.cwl_base_command -%}
   {{ '  ' }}- "{{ item }}"
