Update bespin_job_watcher role to use rabbit host from variable

--- a/bespin_job_watcher/templates/config.j2
+++ b/bespin_job_watcher/templates/config.j2
@@ -10,7 +10,7 @@
     "exchange": "job_status",
     "user": "{{ bespin_settings.rabbit.username }}",
     "password": "{{ bespin_settings.rabbit.password }}",
-    "host": "bespin-rabbit",
+    "host": "{{ bespin_settings.rabbit.host }}",
     "port": 5672
   },
   "bespinapi": {
