--- a/hook_build/templates/hook-build-service.j2
+++ b/hook_build/templates/hook-build-service.j2
@@ -1,6 +1,7 @@
-export KEYPATH=/etc/pki/tls/private/hook-build.key
-export CERTPATH=/etc/pki/tls/certs/hook-build.crt
-export MESSAGE_REGEX={{github_message_regex}}
-export GITHUB_KEY={{github_key}}
-export ON_RELEASE_CMD={{hook_build_dir}}/build-module.sh
-node index.js
+sudo \
+  KEYPATH=/etc/pki/tls/private/hook-build.key \
+  CERTPATH=/etc/pki/tls/certs/hook-build.crt \
+  MESSAGE_REGEX={{github_message_regex}} \
+  GITHUB_KEY={{github_key}} \
+  ON_RELEASE_CMD={{hook_build_dir}}/build-module.sh \
+  node index.js
