Add log_level option to lando server config
Fixes #29

--- a/bespin_lando/templates/lando_config.yml.j2
+++ b/bespin_lando/templates/lando_config.yml.j2
@@ -14,3 +14,4 @@ cloud_settings:
 bespin_api:
   url: "{{ bespin_settings.web.url }}"
   token: "{{ bespin_settings.web.lando_token }}"
+log_level: "{{ bespin_settings.lando.log_level}}"
