--- a/postgres_backup/templates/backup-postgres.sh.j2
+++ b/postgres_backup/templates/backup-postgres.sh.j2
@@ -6,7 +6,7 @@ BACKUP_PATH=${BACKUP_DIR}/{{ backup_filename_prefix }}.$(date +%Y-%m-%d-%H%M%S).
 
 mkdir -p $BACKUP_DIR
 
-docker run \
+docker run --rm {{ docker_network_flag }} \
    -e  PGHOST={{ database_host }} \
    -e  PGPORT={{ database_port }} \
    -e  PGDATABASE={{ database_name }} \
