changes to allow use of lando-util in bespin_lando and bespin_lando_worker
Adds command settings config to lando based on bespin_settings(this specifies the lando-util commands to run).
Changes bespin_lando_worker to install a utility package with the default being lando-util.

--- a/bespin_lando/templates/lando_config.yml.j2
+++ b/bespin_lando/templates/lando_config.yml.j2
@@ -15,3 +15,7 @@ bespin_api:
   url: "{{ bespin_settings.web.url }}"
   token: "{{ bespin_settings.web.lando_token }}"
 log_level: "{{ bespin_settings.lando.log_level}}"
+commands:
+  stage_data_command: {{ bespin_settings.lando.stage_data_command | to_json }}
+  organize_output_command: {{ bespin_settings.lando.organize_output_command | to_json }}
+  save_output_command: {{ bespin_settings.lando.save_output_command | to_json }}
