add labels to system data pvc,job,pods
Also adds comment explaining cleanup system data.

--- a/bespin_k8s_namespace/templates/k8s-lando-stage-system-data.yml.j2
+++ b/bespin_k8s_namespace/templates/k8s-lando-stage-system-data.yml.j2
@@ -2,8 +2,13 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: "{{ system_data_item.pvc_name }}"
+  labels:
+    bespin_system_data: "true"
 spec:
   template:
+    metadata:
+      labels:
+        bespin_system_data: "true"
     spec:
       initContainers:
       - name: change-permissions
