bespin_lando_k8s pass ssl_ca_cert to k8s lando/watcher
Writes ssl_ca_cert_data to a file. Passes the filename to lando_k8s via config file.

--- a/bespin_lando_k8s/templates/lando_k8s_config.yml.j2
+++ b/bespin_lando_k8s/templates/lando_k8s_config.yml.j2
@@ -11,6 +11,7 @@ cluster_api_settings:
   token: "{{ lando_k8s.token }}"
   namespace: "{{ lando_k8s.namespace }}"
   verify_ssl: {{ lando_k8s.verify_ssl }}
+  ssl_ca_cert: {{ ca_cert_filename }}
 
 bespin_api:
   token: "{{ bespin_settings.web.lando_token }}"
